# Pokemon

./: .gitignore  Pokemon.db  pyproject.toml
pokemon/: Pokemon.db  downloadDB.py  gamePageBackEnd.py  logs.py  main.py  pokemonCard.py  pokemonDatabase.py  test.py  typeManager.py
pokemon/static/: allJavascriptFiles.js  scripts.js  styles.css
pokemon/templates/: attackerFragment.html  cardFragment.html  cardFragmentP1.html  dummy.html  gameStartPage.html  index.html  pokedex.html  pokemonCard.html  pokemonDownload.html  pokemonGame.html  pokemonMenu.html  scripts.js  singleCard.html
tests/: __init__.py  test_deck.py
