[tool.poetry]
name = "pokemon"
version = "0.1.0"
description = ""
authors = ["Noctiscreo <noctiscreo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
